# cheferd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
archive/: execute_rule.cpp  execute_rule.hpp  housekeeping_rule.cpp  housekeeping_rule.hpp  instance_rule.cpp  instance_rule.hpp  rule.cpp  rule.hpp  rule_creation_test.cpp
files/: core_config_file  dynamic_rules_with_time_file  enforcement_rules_with_time_file  local_config_file  local_config_file_2  mds_rules_with_time_file  posix_layer_housekeeping_rules_dynamic  posix_layer_housekeeping_rules_mds  posix_layer_housekeeping_rules_static_data_metadata  posix_layer_housekeeping_rules_static_op  posix_layer_housekeeping_rules_static_total  static_rules_with_time_file_job  static_rules_with_time_file_job_data  static_rules_with_time_file_job_metadata  static_rules_with_time_file_job_op  static_rules_with_time_file_user
include/cheferd/controller/: control_application.hpp  controller.hpp  core_control_application.hpp  local_control_application.hpp  system_admin.hpp
include/cheferd/networking/: connection_manager.hpp  core_connection_manager.hpp  interface_definitions.hpp  local_connection_manager.hpp  local_interface.hpp  paio_interface.hpp  southbound_interface.hpp
include/cheferd/networking/stage_response/: stage_response.hpp  stage_response_ack.hpp  stage_response_handshake.hpp  stage_response_stat.hpp  stage_response_stats.hpp  stage_response_stats_global.hpp
include/cheferd/session/: data_plane_session.hpp  handshake_session.hpp  local_controller_session.hpp  policy_generator.hpp  session.hpp
include/cheferd/utils/: command_line_parser.hpp  config_file_parser.hpp  context_propagation_definitions.hpp  logging.hpp  options.hpp  rules_file_parser.hpp  status.hpp
include/shepherd/controller/: control_application.hpp  controller.hpp  core_control_application.hpp  local_control_application.hpp  system_admin.hpp
include/shepherd/networking/: connection_manager.hpp  interface_definitions.hpp  local_interface.hpp  paio_interface.hpp  southbound_interface.hpp
include/shepherd/networking/stage_response/: stage_response.hpp  stage_response_ack.hpp  stage_response_handshake.hpp  stage_response_stat.hpp  stage_response_stats.hpp  stage_response_stats_entity.hpp  stage_response_stats_global.hpp
include/shepherd/session/: data_plane_session.hpp  local_controller_session.hpp  policy_generator.hpp
include/shepherd/utils/: context_propagation_definitions.hpp  logging.hpp  make_unique.hpp  options.hpp  rules_file_parser.hpp  status.hpp
protos/: BUILD  README.md  controllers_grpc_interface.proto
src/controller/: controller.cpp  controller_exec.cpp  core_control_application.cpp  local_control_application.cpp  system_admin.cpp
src/networking/: connection_manager.cpp  core_connection_manager.cpp  local_connection_manager.cpp  local_interface.cpp  paio_interface.cpp
src/networking/stage_response/: stage_response.cpp  stage_response_ack.cpp  stage_response_handshake.cpp  stage_response_stat.cpp  stage_response_stats.cpp  stage_response_stats_entity.cpp  stage_response_stats_global.cpp
src/session/: data_plane_session.cpp  handshake_session.cpp  local_controller_session.cpp  policy_generator.cpp  session.cpp
src/utils/: command_line_parser.cpp  config_file_parser.cpp  logging.cpp  rules_file_parser.cpp  status.cpp
tests/: 4100  cheferd_collect_statistics_test.cpp  cheferd_control_rules_file_parser_test.cpp  cheferd_controller_flags_test.cpp  cheferd_data_plane_connection_test.cpp  cheferd_housekeeping_rules_file_parser_test.cpp  cheferd_local_controller_connection_test.cpp  cheferd_static_control_test.cpp  shepherd_rules_file_parser_test.cpp
